Setup VLCJ to use for playing built in movie files for appli